-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Optimization
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Using a moved object
Using a moved object may lead to an unexpected/undefined behavior. An object is used after it's moved.
/src/mongo/db/query/index_entry.h:170: USE_AFTER_MOVE 128583 "multikeyPathSet" is moved (indicated by "std::move(multikeyPathSet)").
/src/mongo/db/query/index_entry.h:174: USE_AFTER_MOVE 128583 "multikeyPathSet" is used after it has been already moved.