SERVER-68731 use this to clarify for coverity that the members of the class are checked, not arguments